src/tests/snapshots/hebi__tests__assignment__opt_assign_none.snap
---
source: src/tests/assignment.rs
expression: snapshot
---
# Modules:


# Input:
v := none
v ??= 2
print v


# Result (success):
none

# Stdout:
2


