src/tests/snapshots/hebi__tests__assignment__opt_assign_some.snap
---
source: src/tests/assignment.rs
expression: snapshot
---
# Modules:


# Input:
v := 10
v ??= 2
print v


# Result (success):
none

# Stdout:
10


